# raytracing-course-hw

./: .gitignore  .gitmodules
hw1/: CMakeLists.txt  build.sh  run.sh  sample.txt
hw1/src/: color.cpp  figures.cpp  main.cpp  point.cpp  primitives.cpp  quaternion.cpp  scene.cpp  sceneio.cpp
hw1/src/include/: color.h  figures.h  point.h  primitives.h  quaternion.h  scene.h  sceneio.h
hw2/: CMakeLists.txt  sample.txt
hw2/src/: color.cpp  light_source.cpp  primitives.cpp  quaternion.cpp  scene.cpp  sceneio.cpp  vec3.cpp
hw2/src/include/: color.h  light_source.h  primitives.h  scene.h  vec3.h
hw3/: CMakeLists.txt  build.sh  log.txt  practice3_4.txt
hw3/src/: color.cpp  main.cpp  primitives.cpp  scene.cpp  sceneio.cpp
hw3/src/include/: primitives.h  quaternion.h  scene.h  vec3.h
hw4/: CMakeLists.txt  log.txt  practice3_1.txt  practice3_3.txt  practice3_4.txt  practice3_5.txt
hw4/src/: main.cpp  primitives.cpp  scene.cpp  sceneio.cpp
hw5/: CMakeLists.txt
hw5/src/: color.cpp  primitives.cpp  scene.cpp  sceneio.cpp
hw6/: CMakeLists.txt
hw6/examples/: practice6_1.blend  practice6_1.blend1  practice6_1.gltf  practice6_2.gltf
hw6/src/: scene.cpp  sceneio.cpp
hw6/src/include/: bvh.h  distributions.h  gltf_structs.h  primitives.h  quaternion.h  scene.h  sceneio.h  transition.h
hw7/: CMakeLists.txt  run.sh
hw7/examples/: practice7_1.gltf  practice7_2.gltf  practice7_3.gltf  practice7_4.gltf
hw7/src/: main.cpp  primitives.cpp  scene.cpp  sceneio.cpp
hw8/: CMakeLists.txt  run.sh
hw8/src/: main.cpp  primitives.cpp  scene.cpp  sceneio.cpp
(+33 files in other folders)
